ch-ch-chaaaanges

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -48,8 +48,8 @@
           <div class="container">
             <div class="nav-logo">Logo Here<a href="index.html"> </a></div>
             <ul class="nav-main-menu">
+              
               <li><a href="index.html">HOME</a>
-
               </li>
               <li><a href="#">PAGES</a>
                 <ul>
@@ -107,7 +107,7 @@
         </div>
       </nav>
     </div>
-    <div class="after-main-nav after-main-nav-2-a3 text-center"><a href="index.html">Micaela Berry Porfolio</a></div>
+    <div class="after-main-nav after-main-nav-2-a3 text-center"><a href="index.html"><h3>Micaela Berry Porfolio</h3></a></div>
     <main>
       <!--site header-->
       <header class="site-header"></header>
