--- a/HTML/index.html
+++ b/HTML/index.html
@@ -72,6 +72,7 @@
               
             </ul>
             <ul class="nav-main-menu small-screen">
+
               <li><a href="index.html">HOME</a>
 
               <li><a href="#">PAGES</a>
@@ -126,7 +127,7 @@
                   <div class="cell-middle">
                     <div class="container">
                       <div class="caption-wrapper text-center">
-                        <div class="heading-icon-1 caption"></div>
+                        
                         <h1 class="caption">Welcome To My Portfolio</h1>
                         <p class="caption">Take a closer look at my work as a software developer and graphic desginer</p><a href="aboutme.html" class="caption border-btn border-btn-light btn-size-5">MORE INFO</a>
                       </div>
@@ -146,18 +147,37 @@
             <div class="row">
               <div class="col-md-4 service-item-wrapper text-center section-block">
                 <div class="block-service-style-03"><a href="#"><i class="icon-indians-icons-07"></i>
-                    <h5 class="heading-hr-2">WEB &amp; DIGITAL DESIGN</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></a></div>
+                    <h5 class="heading-hr-2">FRONTEND</h5>
+                    <p>
+                      <ul>
+                          <li>Adobe Creative Suite </li>
+                          <li>HTML &amp; HTML5 </li>
+                          <li>CSS</li>                          
+                          <li>JavaScript </li>
+                          <li>Responsive Design </li>
+                          <li>Bootstrap</li>
+                          <li>Wordpress</li>
+                        </ul>
+                      </p></a></div>
               </div>
               <div class="col-md-4 service-item-wrapper text-center section-block">
                 <div class="block-service-style-03"><a href="#"><i class="icon-indians-icons-08"></i>
                     <h5 class="heading-hr-2">CREATIVITY &amp; BRANDING</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></a></div>
+                    <p>Over 8 eight years of professional experience as a graphic designer and experience in visual communication, user experience, and marketing. Proven ability to collaborate and work as part of an effective team, deepened technical expertise through research experience and professional training. </p></a></div>
               </div>
               <div class="col-md-4 service-item-wrapper text-center section-block">
                 <div class="block-service-style-03"><a href="#"><i class="icon-indians-icons-02"></i>
-                    <h5 class="heading-hr-2">PRODUCT DEVELOPMENT</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p></a></div>
+                    <h5 class="heading-hr-2">BACKEND</h5>
+                    <p><ul>
+                          <li>Java </li>
+                          <li>Spring</li>
+                          <li>MVC</li>                          
+                          <li>SQL</li>
+                          <li>Hibernate </li>
+                          <li>OOP</li>
+                          <li>CPanel</li>
+                        </ul>
+                      </p></a></div>
               </div>
             </div>
           </div>
@@ -170,8 +190,8 @@
               <div class="header-wrapper">
                 <header class="section-header header-type-2 style-1">
                   <div class="container">
-                    <h4 class="heading-hr-1">ENJOY OUR PORTFOLIO</h4>
-                    <q class="header-caption">Here are a few examples of my work as a software developer and graphic designer. To find more, click on the Portfolio tab or more items!</q>
+                    <h4 class="heading-hr-1">MY PORTFOLIO</h4>
+                    <q class="header-caption">Here are a few examples of my work as a software developer and graphic designer. Be sure to look around for more of my work!</q>
                   </div>
                 </header>
               </div>
@@ -296,9 +316,9 @@
             <div class="row">
               <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="footer-quote-01">
-                  <div class="footer-quote"><a href="index.html"><img src="assets/images/footer-001.png" alt="wolverine"></a>
+                  <div class="footer-quote"><a href="index.html"></a>
                     <div class="content">
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<br><br>standard dummy text ever since. Lorem  Ipsum has been the industry’s standard dummy text ever since. </p>
+                      <p><img src="assets/images/unicornMB.gif" width = "40%" alt="image"><br><br>standard dummy text ever since. Lorem  Ipsum has been the industry’s standard dummy text ever since. </p>
                     </div>
                     <div class="icon">
                       <p>Find Me:</p>
