change around the corner

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -254,15 +254,15 @@
       </section>
      
       <!--site footer-->
-      <footer class="footer-preset-02">
+<footer class="footer-preset-02">
         <div class="container">
           <div class="footer-preset-wrapper">
             <div class="row">
               <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="footer-quote-01">
-                  <div class="footer-quote"><a href="index.html"><img src="assets/images/footer-001.png" alt="wolverine"></a>
+                  <div class="footer-quote"><a href="index.html"></a>
                     <div class="content">
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.<br><br>standard dummy text ever since. Lorem  Ipsum has been the industry’s standard dummy text ever since. </p>
+                      <p><img src="assets/images/unicornMB.png" width = "70%" alt="image"></p>
                     </div>
                     <div class="icon">
                       <p>Find Me:</p>
@@ -275,7 +275,7 @@
                   </div>
                 </div>
               </div>
-              
+
               <div class="col-md-offset-30 col-md-4 col-sm-8 col-sm-offset-2 col-xs-12">
                 <h5>CONTACT ME</h5>
                 <div class="widget contact-us">
