--- a/HTML/index.html
+++ b/HTML/index.html
@@ -318,7 +318,7 @@
                 <div class="footer-quote-01">
                   <div class="footer-quote"><a href="index.html"></a>
                     <div class="content">
-                      <p><img src="assets/images/unicornMB.gif" width = "40%" alt="image"><br><br>standard dummy text ever since. Lorem  Ipsum has been the industry’s standard dummy text ever since. </p>
+                      <p><img src="assets/images/unicornMB.png" width = "70%" alt="image"></p>
                     </div>
                     <div class="icon">
                       <p>Find Me:</p>
