more web updates

--- a/HTML/page-contact.html
+++ b/HTML/page-contact.html
@@ -59,14 +59,7 @@
               </li>
 
 
-              <li><a href="#">PORTFOLIO</a>
-                <ul class="mega-menu-content">
-
-                    <ul>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Software Development</a></li>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Graphic Design</a></li>
-                    </ul>
-                </ul>
+              <li><a href="portfolio.html">PORTFOLIO</a>
               </li>
               
             </ul>
@@ -81,13 +74,7 @@
                 </ul>
               </li >
               
-              <li><a href="#">PORTFOLIO</a>
-                <ul class="mega-menu-content">
-                    <ul>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Software Development</a></li>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Graphic Design</a></li>
-                    </ul>
-                </ul>
+              <li><a href="#">PORTFOLIO</a> 
               </li>
 
             </ul>
