--- a/HTML/index.html
+++ b/HTML/index.html
@@ -60,16 +60,8 @@
               </li>
 
 
-              <li><a href="#">PORTFOLIO</a>
-                <ul class="mega-menu-content">
-
-                    <ul>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Software Development</a></li>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Graphic Design</a></li>
-                    </ul>
-                </ul>
+              <li><a href="portfolio.html">PORTFOLIO</a>
               </li>
-              
             </ul>
             <ul class="nav-main-menu small-screen">
 
@@ -83,12 +75,6 @@
               </li >
               
               <li><a href="#">PORTFOLIO</a>
-                <ul class="mega-menu-content">
-                    <ul>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Software Development</a></li>
-                      <li><a href="portfolio-masonry-space-wide-4-col.html">Graphic Design</a></li>
-                    </ul>
-                </ul>
               </li>
 
             </ul>
