more web updates

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Wolverine - Multipurpose Responsive HTML5 Template</title>
+    <title>Portfolio - Micaela Berry</title>
     <meta name="description" content="Wolverine - Responsive Multipurpose HTML5 Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
@@ -109,7 +109,7 @@
       <header class="site-header portfolio-page-header">
         <div data-stellar-background-ratio="0.25" style="background-image: url('assets/images/header-parallax.jpg');" class="parallax-bg"></div>
         <div class="container">
-          <h1>PORTFOLIO</h1>
+          <h1>MICAELA BERRY PORTFOLIO</h1>
         </div>
       </header>
       <!--end site header-->
@@ -130,9 +130,9 @@
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Columbus Ohio Taco Joints</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
+                        <div class="font-serif caption">Database review website of taco joints</div>
                         <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a>
-                          <!-- <a href="assets/images/portfolio-600-1.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a> -->
+                          <a href="assets/images/ohioTaco.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a>
                         </div>
                       </div>
                     </div>
@@ -140,92 +140,95 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 interior fashion">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-1.jpg" alt="CREATIVELY DESIGNED">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 software">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/aria-homepage.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-1.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">ARIA VI</h5>
+                        <div class="font-serif caption">Choose Your Own Adventure Web App Game</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/aria-homepage.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 photography art">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-600-2.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/peace-mission-brochure.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-600-2.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Mission Brochure</h5>
+                        <div class="font-serif caption">Peace Free Lutheran Church Mission Brochure</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/peace-mission-brochure.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 fashion business">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-2.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/save-the-date.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-2.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Save The Date</h5>
+                        <div class="font-serif caption">Offical wedding save the date</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/save-the-date.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 art interior">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-3.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/cdc-gallery-hop.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-3.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">CDC Gallery Hop</h5>
+                        <div class="font-serif caption">Flyer for a daycare art show</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/cdc-gallery-hop.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 business photography">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-600-3.jpg" alt="CREATIVELY DESIGNED">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 software">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/design-home.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-600-3.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">mberry design</h5>
+                        <div class="font-serif caption">Homepage for more of my graphic design work</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/design-home.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 interior fashion">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-4.jpg" alt="CREATIVELY DESIGNED">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/bunker-menu.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-4.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Bunker Menu</h5>
+                        <div class="font-serif caption">Menu for the Eagle Eye Golf Course club</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/bunker-menu.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 photography art">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-600-4.jpg" alt="CREATIVELY DESIGNED">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/smokey-symphony.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-600-4.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Columbus Symphony/Smokey Robinson</h5>
+                        <div class="font-serif caption">Flyer to promote tickets for Smokey Robinson and Columbus Symphony</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/smokey-symphony.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
