more web updates

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -140,7 +140,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 software">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-16 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/aria-homepage.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -168,7 +168,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-8 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/save-the-date.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -208,6 +208,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/bunker-menu.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
@@ -221,6 +222,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/smokey-symphony.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
@@ -234,84 +236,91 @@
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 fashion business">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-600-5.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/aq-invite.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-600-5.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">You Are Invited</h5>
+                        <div class="font-serif caption">Offical wedding invitaion</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/aq-invite.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 art interior">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-600-6.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/dla-mwr-logo.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-600-6.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">DLA Logo</h5>
+                        <div class="font-serif caption">One of the logos in the running for a new branding image</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/dla-mwr-logo.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 business photography">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-5.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-10 software">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/robot-cat.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-5.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Virtual Pet</h5>
+                        <div class="font-serif caption">This app lets the user feed, water, oil, walk, play and clean the cages of the robotic and organic pets.</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/robot-cat.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 interior fashion">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-6.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 software">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/fortune-teller.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-6.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Fortune Teller</h5>
+                        <div class="font-serif caption">App that asks the user specific questions and then reveals their fortune</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/fortune-teller.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 photography art">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-600-7.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/niche-poster.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-600-7.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Niche Poster/Font</h5>
+                        <div class="font-serif caption">I created a font and utilized in a poster</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/niche-poster.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 fashion business">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-600-8.jpg" alt="CREATIVELY DESIGNED">
+
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/chsc-mailer.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-600-8.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">CHSC Mailer</h5>
+                        <div class="font-serif caption">Offical mailer for Columbus Healthcare and Safety Consultants</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/chsc-mailer.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+
               <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 art interior">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-8.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
@@ -325,6 +334,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 business photography">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-7.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
